--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
