--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "test:e2e:ui": "playwright test --ui",
     "analyze": "ANALYZE=true npm run build",
     "type-check": "tsc --noEmit",
-    "security:audit": "npm audit --audit-level=moderate"
+    "security:audit": "npm audit --audit-level=moderate",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@sentry/nextjs": "^10.26.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "next": "^14.2.0",
+    "posthog-js": "^1.298.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.66.1",
     "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
@@ -59,6 +65,14 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vitest": "^4.0.13"
+    "vitest": "^4.0.13",
+    "storybook": "^10.0.8",
+    "@storybook/nextjs": "^10.0.8",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-docs": "^10.0.8",
+    "@storybook/addon-onboarding": "^10.0.8",
+    "eslint-plugin-storybook": "^10.0.8",
+    "@storybook/addon-a11y": "^10.0.8",
+    "@storybook/addon-vitest": "^10.0.8"
   }
 }
